y.output
   0  $accept : program $end

   1  program : Gdeclaration main_function

   2  Gdeclaration : DECL GdeclStatements ENDDECL

   3  GdeclStatements :
   4                  | GdeclStatements GdeclStatement

   5  GdeclStatement : type Gvars SEMICOLON

   6  Gvars : Gvar
   7        | Gvars COMMA Gvar

   8  type : INTEGER
   9       | BOOLEAN

  10  Gvar : ID
  11       | ID LSQUARE NUMBER RSQUARE

  12  main_function : INTEGER MAIN LPAREN RPAREN LFLOWER fbody RFLOWER

  13  fbody : declaration beginbody

  14  declaration : DECL declStatements ENDDECL

  15  declStatements :
  16                 | declStatements declStatement

  17  declStatement : type vars SEMICOLON

  18  vars : var
  19       | vars COMMA var

  20  var : ID

  21  beginbody : BEGINN statements return END

  22  statements :
  23             | statements statement

  24  statement : ifelse
  25            | dowhile
  26            | read
  27            | write
  28            | astatement

  29  ifelse : IF expression THEN statements ENDIF SEMICOLON
  30         | IF expression THEN statements ELSE statements ENDIF SEMICOLON

  31  dowhile : WHILE expression DO statements ENDWHILE SEMICOLON

  32  astatement : ID ASSIGN expression SEMICOLON
  33             | ID LSQUARE expression RSQUARE ASSIGN expression SEMICOLON

  34  read : READ LPAREN ID RPAREN SEMICOLON
  35       | READ LPAREN ID LSQUARE expression RSQUARE RPAREN SEMICOLON

  36  write : WRITE LPAREN expression RPAREN SEMICOLON

  37  return : RETURN expression SEMICOLON

  38  expression : expression PLUS expression
  39             | expression MINUS expression
  40             | expression MULT expression
  41             | expression DIVIDE expression
  42             | expression MODULUS expression
  43             | expression EQUAL expression
  44             | expression LESS_THAN expression
  45             | expression GREATER_THAN expression
  46             | expression GREATER_EQ expression
  47             | expression LESS_EQUAL expression
  48             | expression NEQUAL expression
  49             | expression AND expression
  50             | expression OR expression
  51             | NOT expression
  52             | LPAREN expression RPAREN
  53             | TRUE
  54             | FALSE
  55             | NUMBER
  56             | ID
  57             | ID LSQUARE expression RSQUARE

state 0
	$accept : . program $end  (0)

	DECL  shift 1
	.  error

	program  goto 2
	Gdeclaration  goto 3


state 1
	Gdeclaration : DECL . GdeclStatements ENDDECL  (2)
	GdeclStatements : .  (3)

	.  reduce 3

	GdeclStatements  goto 4


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : Gdeclaration . main_function  (1)

	INTEGER  shift 5
	.  error

	main_function  goto 6


state 4
	Gdeclaration : DECL GdeclStatements . ENDDECL  (2)
	GdeclStatements : GdeclStatements . GdeclStatement  (4)

	ENDDECL  shift 7
	INTEGER  shift 8
	BOOLEAN  shift 9
	.  error

	GdeclStatement  goto 10
	type  goto 11


state 5
	main_function : INTEGER . MAIN LPAREN RPAREN LFLOWER fbody RFLOWER  (12)

	MAIN  shift 12
	.  error


state 6
	program : Gdeclaration main_function .  (1)

	.  reduce 1


state 7
	Gdeclaration : DECL GdeclStatements ENDDECL .  (2)

	.  reduce 2


state 8
	type : INTEGER .  (8)

	.  reduce 8


state 9
	type : BOOLEAN .  (9)

	.  reduce 9


state 10
	GdeclStatements : GdeclStatements GdeclStatement .  (4)

	.  reduce 4


state 11
	GdeclStatement : type . Gvars SEMICOLON  (5)

	ID  shift 13
	.  error

	Gvars  goto 14
	Gvar  goto 15


state 12
	main_function : INTEGER MAIN . LPAREN RPAREN LFLOWER fbody RFLOWER  (12)

	LPAREN  shift 16
	.  error


state 13
	Gvar : ID .  (10)
	Gvar : ID . LSQUARE NUMBER RSQUARE  (11)

	LSQUARE  shift 17
	SEMICOLON  reduce 10
	COMMA  reduce 10


state 14
	GdeclStatement : type Gvars . SEMICOLON  (5)
	Gvars : Gvars . COMMA Gvar  (7)

	SEMICOLON  shift 18
	COMMA  shift 19
	.  error


state 15
	Gvars : Gvar .  (6)

	.  reduce 6


state 16
	main_function : INTEGER MAIN LPAREN . RPAREN LFLOWER fbody RFLOWER  (12)

	RPAREN  shift 20
	.  error


state 17
	Gvar : ID LSQUARE . NUMBER RSQUARE  (11)

	NUMBER  shift 21
	.  error


state 18
	GdeclStatement : type Gvars SEMICOLON .  (5)

	.  reduce 5


state 19
	Gvars : Gvars COMMA . Gvar  (7)

	ID  shift 13
	.  error

	Gvar  goto 22


state 20
	main_function : INTEGER MAIN LPAREN RPAREN . LFLOWER fbody RFLOWER  (12)

	LFLOWER  shift 23
	.  error


state 21
	Gvar : ID LSQUARE NUMBER . RSQUARE  (11)

	RSQUARE  shift 24
	.  error


state 22
	Gvars : Gvars COMMA Gvar .  (7)

	.  reduce 7


state 23
	main_function : INTEGER MAIN LPAREN RPAREN LFLOWER . fbody RFLOWER  (12)

	DECL  shift 25
	.  error

	fbody  goto 26
	declaration  goto 27


state 24
	Gvar : ID LSQUARE NUMBER RSQUARE .  (11)

	.  reduce 11


state 25
	declaration : DECL . declStatements ENDDECL  (14)
	declStatements : .  (15)

	.  reduce 15

	declStatements  goto 28


state 26
	main_function : INTEGER MAIN LPAREN RPAREN LFLOWER fbody . RFLOWER  (12)

	RFLOWER  shift 29
	.  error


state 27
	fbody : declaration . beginbody  (13)

	BEGINN  shift 30
	.  error

	beginbody  goto 31


state 28
	declaration : DECL declStatements . ENDDECL  (14)
	declStatements : declStatements . declStatement  (16)

	ENDDECL  shift 32
	INTEGER  shift 8
	BOOLEAN  shift 9
	.  error

	type  goto 33
	declStatement  goto 34


state 29
	main_function : INTEGER MAIN LPAREN RPAREN LFLOWER fbody RFLOWER .  (12)

	.  reduce 12


state 30
	beginbody : BEGINN . statements return END  (21)
	statements : .  (22)

	.  reduce 22

	statements  goto 35


state 31
	fbody : declaration beginbody .  (13)

	.  reduce 13


state 32
	declaration : DECL declStatements ENDDECL .  (14)

	.  reduce 14


state 33
	declStatement : type . vars SEMICOLON  (17)

	ID  shift 36
	.  error

	vars  goto 37
	var  goto 38


state 34
	declStatements : declStatements declStatement .  (16)

	.  reduce 16


state 35
	beginbody : BEGINN statements . return END  (21)
	statements : statements . statement  (23)

	ID  shift 39
	READ  shift 40
	WRITE  shift 41
	IF  shift 42
	WHILE  shift 43
	RETURN  shift 44
	.  error

	statement  goto 45
	ifelse  goto 46
	dowhile  goto 47
	read  goto 48
	write  goto 49
	return  goto 50
	astatement  goto 51


state 36
	var : ID .  (20)

	.  reduce 20


state 37
	declStatement : type vars . SEMICOLON  (17)
	vars : vars . COMMA var  (19)

	SEMICOLON  shift 52
	COMMA  shift 53
	.  error


state 38
	vars : var .  (18)

	.  reduce 18


state 39
	astatement : ID . ASSIGN expression SEMICOLON  (32)
	astatement : ID . LSQUARE expression RSQUARE ASSIGN expression SEMICOLON  (33)

	LSQUARE  shift 54
	ASSIGN  shift 55
	.  error


state 40
	read : READ . LPAREN ID RPAREN SEMICOLON  (34)
	read : READ . LPAREN ID LSQUARE expression RSQUARE RPAREN SEMICOLON  (35)

	LPAREN  shift 56
	.  error


state 41
	write : WRITE . LPAREN expression RPAREN SEMICOLON  (36)

	LPAREN  shift 57
	.  error


state 42
	ifelse : IF . expression THEN statements ENDIF SEMICOLON  (29)
	ifelse : IF . expression THEN statements ELSE statements ENDIF SEMICOLON  (30)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 64


state 43
	dowhile : WHILE . expression DO statements ENDWHILE SEMICOLON  (31)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 65


state 44
	return : RETURN . expression SEMICOLON  (37)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 66


state 45
	statements : statements statement .  (23)

	.  reduce 23


state 46
	statement : ifelse .  (24)

	.  reduce 24


state 47
	statement : dowhile .  (25)

	.  reduce 25


state 48
	statement : read .  (26)

	.  reduce 26


state 49
	statement : write .  (27)

	.  reduce 27


state 50
	beginbody : BEGINN statements return . END  (21)

	END  shift 67
	.  error


state 51
	statement : astatement .  (28)

	.  reduce 28


state 52
	declStatement : type vars SEMICOLON .  (17)

	.  reduce 17


state 53
	vars : vars COMMA . var  (19)

	ID  shift 36
	.  error

	var  goto 68


state 54
	astatement : ID LSQUARE . expression RSQUARE ASSIGN expression SEMICOLON  (33)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 69


state 55
	astatement : ID ASSIGN . expression SEMICOLON  (32)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 70


state 56
	read : READ LPAREN . ID RPAREN SEMICOLON  (34)
	read : READ LPAREN . ID LSQUARE expression RSQUARE RPAREN SEMICOLON  (35)

	ID  shift 71
	.  error


state 57
	write : WRITE LPAREN . expression RPAREN SEMICOLON  (36)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 72


state 58
	expression : ID .  (56)
	expression : ID . LSQUARE expression RSQUARE  (57)

	LSQUARE  shift 73
	SEMICOLON  reduce 56
	RSQUARE  reduce 56
	MODULUS  reduce 56
	AND  reduce 56
	OR  reduce 56
	THEN  reduce 56
	EQUAL  reduce 56
	NEQUAL  reduce 56
	LESS_THAN  reduce 56
	LESS_EQUAL  reduce 56
	GREATER_THAN  reduce 56
	GREATER_EQ  reduce 56
	PLUS  reduce 56
	MINUS  reduce 56
	MULT  reduce 56
	DIVIDE  reduce 56
	RPAREN  reduce 56
	DO  reduce 56


state 59
	expression : TRUE .  (53)

	.  reduce 53


state 60
	expression : FALSE .  (54)

	.  reduce 54


state 61
	expression : NOT . expression  (51)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 74


state 62
	expression : NUMBER .  (55)

	.  reduce 55


state 63
	expression : LPAREN . expression RPAREN  (52)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 75


state 64
	ifelse : IF expression . THEN statements ENDIF SEMICOLON  (29)
	ifelse : IF expression . THEN statements ELSE statements ENDIF SEMICOLON  (30)
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)

	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	THEN  shift 79
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	.  error


state 65
	dowhile : WHILE expression . DO statements ENDWHILE SEMICOLON  (31)
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)

	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	DO  shift 90
	.  error


state 66
	return : RETURN expression . SEMICOLON  (37)
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)

	SEMICOLON  shift 91
	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	.  error


state 67
	beginbody : BEGINN statements return END .  (21)

	.  reduce 21


state 68
	vars : vars COMMA var .  (19)

	.  reduce 19


state 69
	astatement : ID LSQUARE expression . RSQUARE ASSIGN expression SEMICOLON  (33)
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)

	RSQUARE  shift 92
	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	.  error


state 70
	astatement : ID ASSIGN expression . SEMICOLON  (32)
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)

	SEMICOLON  shift 93
	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	.  error


state 71
	read : READ LPAREN ID . RPAREN SEMICOLON  (34)
	read : READ LPAREN ID . LSQUARE expression RSQUARE RPAREN SEMICOLON  (35)

	LSQUARE  shift 94
	RPAREN  shift 95
	.  error


state 72
	write : WRITE LPAREN expression . RPAREN SEMICOLON  (36)
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)

	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	RPAREN  shift 96
	.  error


state 73
	expression : ID LSQUARE . expression RSQUARE  (57)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 97


state 74
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)
	expression : NOT expression .  (51)

	MODULUS  shift 76
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	SEMICOLON  reduce 51
	RSQUARE  reduce 51
	AND  reduce 51
	OR  reduce 51
	THEN  reduce 51
	EQUAL  reduce 51
	NEQUAL  reduce 51
	LESS_THAN  reduce 51
	LESS_EQUAL  reduce 51
	GREATER_THAN  reduce 51
	GREATER_EQ  reduce 51
	RPAREN  reduce 51
	DO  reduce 51


state 75
	expression : expression . PLUS expression  (38)
	expression : expression . MINUS expression  (39)
	expression : expression . MULT expression  (40)
	expression : expression . DIVIDE expression  (41)
	expression : expression . MODULUS expression  (42)
	expression : expression . EQUAL expression  (43)
	expression : expression . LESS_THAN expression  (44)
	expression : expression . GREATER_THAN expression  (45)
	expression : expression . GREATER_EQ expression  (46)
	expression : expression . LESS_EQUAL expression  (47)
	expression : expression . NEQUAL expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . OR expression  (50)
	expression : LPAREN expression . RPAREN  (52)

	MODULUS  shift 76
	AND  shift 77
	OR  shift 78
	EQUAL  shift 80
	NEQUAL  shift 81
	LESS_THAN  shift 82
	LESS_EQUAL  shift 83
	GREATER_THAN  shift 84
	GREATER_EQ  shift 85
	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	RPAREN  shift 98
	.  error


state 76
	expression : expression MODULUS . expression  (42)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 99


state 77
	expression : expression AND . expression  (49)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 100


state 78
	expression : expression OR . expression  (50)

	ID  shift 58
	TRUE  shift 59
	FALSE  shift 60
	NOT  shift 61
	NUMBER  shift 62
	LPAREN  shift 63
	.  error

	expression  goto 101


state 79
	ifelse : IF expression THEN . statements ENDIF SEMICOLON  (29)
	ifelse : IF expression THEN . statements ELSE statements ENDIF SEMICOLON  (30)
	statements : .  (22)

	.  reduce 22

	statements  goto 102

